--- a/client/src/components/admin/workshops/workshopsList.css
+++ b/client/src/components/admin/workshops/workshopsList.css
@@ -145,3 +145,10 @@ body, html {
   text-align: center;
   padding-right: 5px; /* תוכל לשנות את הערך בהתאם לצורך */
 }
+
+.workshops-list td .action-buttons {
+  display: flex;
+  gap: 10px; /* רווח בין הכפתורים */
+  justify-content: center; /* ממרכז את הכפתורים בתא */
+  align-items: center;
+}
